--- a/Mafia/Info.plist
+++ b/Mafia/Info.plist
@@ -2,6 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>CLM45.ttf</string>
+		<string>CLM46.ttf</string>
+		<string>SF-UI-Display-Ultralight_0.ttf</string>
+		<string>SF-UI-Display-Thin_0.ttf</string>
+		<string>SF-UI-Display-Semibold_0.ttf</string>
+		<string>SF-UI-Display-Regular_0.ttf</string>
+		<string>SF-UI-Display-Medium_0.ttf</string>
+		<string>SF-UI-Display-Light_0.ttf</string>
+		<string>SF-UI-Display-Heavy_0.ttf</string>
+		<string>SF-UI-Display-Bold_0.ttf</string>
+		<string>SF-UI-Display-Black_0.ttf</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>ru</string>
 	<key>CFBundleDisplayName</key>
